@@ -28,7 +28,7 @@
 
 import cPickle, os.path, time, glob
 
-DEPS_FORMAT_VERSION = 5
+DEPS_FORMAT_VERSION = 6
 
 class DepsRecord:
     """Record of dependencies of a group of output files generated by
@@ -68,6 +68,7 @@ class WildcardDep(Dep):
 deps_db = {}
 modtimes_db = {}
 cmdlines_db = {}
+dirs_db = {}
 
 def __doAddDependency(bakefile, format, dep):
     key = (bakefile,format)
@@ -97,6 +98,14 @@ def addOutput(bakefile, format, output_file, output_method, save_modtime):
     if save_modtime:
         modtimes_db[output_file] = int(time.time())
 
+def addOutputDir(bakefile, format, dirname):
+    """Adds directory 'dirname' as output created by the bakefile being
+       processed."""
+    key = (bakefile,format)
+    if key not in dirs_db:
+        dirs_db[key] = []
+    dirs_db[key].append(dirname)
+
 def addCmdLine(bakefile, format, cmdline):
     """Records that command line arguments `cmdline' were used when
        generating this bakefile."""
@@ -110,12 +119,13 @@ def save(filename):
     cPickle.dump(deps_db, f, 1)
     cPickle.dump(modtimes_db, f, 1)
     cPickle.dump(cmdlines_db, f, 1)
+    cPickle.dump(dirs_db, f, 1)
     f.close()
 
 def load(filename):
     """Loads dependencies database from a file."""
     f = open(filename,'rb')
-    global deps_db, modtimes_db, cmdlines_db
+    global deps_db, modtimes_db, cmdlines_db, dirs_db
     version = cPickle.load(f)
     if version != DEPS_FORMAT_VERSION:
         raise IOError()
@@ -133,10 +143,11 @@ def load(filename):
             for k in db:
                 orig_db[k] = db[k]
             return orig_db
-        
+
     deps_db = __loadDb(f, deps_db)
     modtimes_db = __loadDb(f, modtimes_db)
     cmdlines_db = __loadDb(f, cmdlines_db)
+    dirs_db = __loadDb(f, dirs_db)
 
 
 def needsUpdate(bakefile, format, cmdline):
